@startuml

title __TRANSPORTGERAETE's Class Diagram__\n

  namespace transportgeraete {
    class transportgeraete.Fourderbaender {
        + breiteFourderbaender : int
        + Fourderbaender()
    }
  }
  

  namespace transportgeraete {
    class transportgeraete.Kipplaster {
        + maxKippwinkel : int
        + Kipplaster()
    }
  }
  

  namespace transportgeraete {
    class transportgeraete.Transportgeraete {
        + Transportgeraete()
    }
  }
  

  transportgeraete.Fourderbaender -up-|> transportgeraete.Transportgeraete
  transportgeraete.Kipplaster -up-|> transportgeraete.Transportgeraete
  transportgeraete.Transportgeraete -up-|> baumaschine.Baumaschinen


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
